--- a/templates/ErpApp/category_list.html
+++ b/templates/ErpApp/category_list.html
@@ -9,7 +9,7 @@
 
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1>الاصناف</h1>
+        <h1>مجموعات الاصناف</h1>
       </div>
 
     </div>
@@ -21,41 +21,27 @@
       <div class="card card-solid">
         <div class="card-body pb-0">
           <div class="row d-flex align-items-stretch">
-            {% for item in object_list %}
+            {% for cat in object_list %}
             <!-- بداية الكتاب -->
             <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch ">
               <div id="" class="card bg-light">
-                <div class="card-header text-muted border-bottom-0">
-                  {{item.category}}
-                </div>
                 <div class="card-body pt-0">
                   <div class="row">
                     <div class="col-7">
-                      <h2 class="lead"><b>{{item.name}}</b></h2>
-                      <ul class="  fa-ul text-muted">
-                        <li class="small"><span class="fa-li"></span>status: {{item.status}}</li>
-                        <li class="small"><span class="fa-li"></span>price: {{item.price}}</li>
-                      </ul>
+                      <h4 class="lead"><b>{{cat.name}}</b></h4>
                     </div>
-                    {% if item.item_img %}
-                    <div class="col-5 text-center">
-                      <img style="height: 120px; width: 120px;" src="{{item.brand_img.url}}" alt=""
-                        class="img-circle img-fluid">
-                    </div>
-                    {% else %}
                     <div class="col-5 text-center">
                       <img style="height: 120px; width: 120px;" src="{%static 'dist/img/download dsf.jpg' %}" alt=""
                         class="img-circle img-fluid">
                     </div>
-                    {% endif %}
                   </div>
                 </div>
                 <div class="card-footer">
                   <div class="text-right">
-                    <a href="/{{item.slug}}/del" class="btn btn-sm bg-danger">
+                    <a href="#" class="btn btn-sm bg-danger">
                       <i class="fas fa-trash"></i>
                     </a>
-                    <a href="/{{item.slug}}/update" class="btn btn-sm btn-primary">
+                    <a href="#" class="btn btn-sm btn-primary">
                       <i class="fas fa-book"></i> تعديل
                     </a>
                   </div>
