add category list

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
   <aside style="position: fixed;" class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="#" class="brand-link">
-      <span class="brand-text font-weight-light">ERP System </span>
+      <span class="brand-text font-weight-light">Erp_System</span>
     </a>
 
     <!-- Sidebar -->
@@ -69,7 +69,7 @@
         <div class="image">
         </div>
         <div class="info">
-          <a href="#" class="d-block"> MR.Abdo Elsharef</a>
+          <a href="#" class="d-block">mr ..Abdelrahman Elsharef</a>
         </div>
       </div>
 
@@ -78,49 +78,30 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
           <li class="nav-item">
-            <a href="items" class="nav-link">
+            <a href="/items" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                ALL Items
+                New Items
               </p>
             </a>
           </li>
-          <!-- <li style="cursor: pointer;" class="nav-item">
-            <a id="statusSold" class="nav-link">
-              <i class="nav-icon far fa-circle text-danger"></i>
-              <p class="text"></p> SOLD</p>
-            </a>
-          </li>
-          <li style="cursor: pointer;" class="nav-item">
-            <a id="" class="nav-link">
-              <i class="nav-icon far fa-circle text-warning"></i>
-              <p>SOON</p>
-            </a>
-          </li>
-          <li style="cursor: pointer;" class="nav-item">
-            <a id="" class="nav-link">
-              <i class="nav-icon far fa-circle text-info"></i>
-              <p>Available</p>
-            </a>
-          </li> -->
           <li class="nav-item has-treeview">
             <a href="/Categories" class="nav-link">
-              <i class="nav-icon fas fa-copy"></i>
+              <i class="nav-icon fas fa-th"></i>
               <p>
                 Category
-                <i class="fas fa-angle-left right"></i>
               </p>
             </a>
           </li>
-        </ul>
       </nav>
       <!-- /.sidebar-menu -->
     </div>
     <!-- /.sidebar -->
   </aside>
 
+
   {% block body%}
-  {%endblock%}
+  {% endblock %}
 
   <!-- في المكان ده هحط footer -->
   <!-- Main Footer -->
