add user acccounts

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,9 @@
       <li class="nav-item d-none d-sm-inline-block">
         <a href="#" class="nav-link">Home</a>
       </li>
+      <li class="nav-item d-none d-sm-inline-block">
+        <a href="{% url 'login' %}" class="nav-link">Login</a>
+      </li>
 
     </ul>
 
